dev-capec/force-app/main/default/objects/ItemCestaBasica__c/ItemCestaBasica__c.object-meta.xml
<CustomObject>
    <label>Item da Cesta Básica</label>
    <nameField>
        <displayFormat>ICB-{000000}</displayFormat>
        <label>Item da Cesta Básica</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens das Cestas Básicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>