dev-capec/force-app/main/default/objects/ItemCestaBasica__c/fields/CestaBasica__c.field-meta.xml
<CustomField>
    <fullName>CestaBasica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cesta Básica</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cesta Básica</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens</relationshipLabel>
    <relationshipName>Itens2</relationshipName>
    <type>Lookup</type>
</CustomField>