dev-capec/force-app/main/default/objects/ItemCestaBasica__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens das Cestas Básicas</relationshipLabel>
    <relationshipName>Itens</relationshipName>
    <type>Lookup</type>
</CustomField>