dev-capec/force-app/main/default/objects/ItemCestaBasica__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CestaBasica__c</columns>
    <columns>Produto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>